<resources>
    <string name="app_name">Films</string>
    <string name="title">Title:</string>
    <string name="releaseDate">Release date:</string>
    <string name="overview">Description:</string>
    <string name="language">Language:</string>
    <string name="reviews">Reviews:</string>
    <string name="seeMore"><![CDATA[see more >>]]></string>
    <string name="image">image</string>
    <string name="author">Author:</string>
    <string name="review">Review:</string>
</resources>
