<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="film"
            type="pdp.va.com.personalgoal.models.Film" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:id="@+id/layout">

            <ImageView
                android:id="@+id/film_details_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                app:imageFromUrl="@{film.posterPath}" />

            <TextView
                android:id="@+id/film_details_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/film_details_image"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/title"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/film_details_title_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintLeft_toRightOf="@+id/film_details_title_label"
                app:layout_constraintBottom_toBottomOf="@+id/film_details_title_label"
                android:text="@{film.title}"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/film_details_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/film_details_title_value"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/releaseDate"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/film_details_release_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@id/film_details_release_date_label"
                app:layout_constraintLeft_toRightOf="@id/film_details_release_date_label"
                android:text="@{film.releaseDate}"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/film_details_overview_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/film_details_release_date_value"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/overview"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/film_details_overview_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/film_details_overview_label"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@{film.overview}"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/film_details_language_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/film_details_overview_value"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/language"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/film_details_language_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/film_details_language_label"
                app:layout_constraintLeft_toRightOf="@id/film_details_language_label"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@{film.originalLanguage}"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/film_details_reviews_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/film_details_language_label"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/reviews"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/see_film_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/film_details_reviews_label"
                app:layout_constraintLeft_toRightOf="@id/film_details_reviews_label"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/seeMore"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="#186de2"
                android:textSize="20sp"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>